frame/support/test/tests/pallet_ui/error_004.stderr
error: Invalid pallet::error, unexpected fields, must be `Unit`
  --> $DIR/error_004.rs:20:5
   |
20 |         U8(u8),
   |           ^^^^
